# MCVGraph

./: .gitignore  DataSource.py  GraphBus.py  README.md  altair_linked.html  bokeh_linked.html  clone_showcase.ipynb  layout heatmap.json  layout neural network.json  main gravity.ipynb  main gravity.py  main heatmap.ipynb  main heatmap.py  main neural network.py  pyproject.toml  requirements_linux.txt  requirements_windows.txt  setup.py
Alternatives/Lineplot/: line_bokeh.py  line_matplotlib.py  line_mcvg.py  line_plotly.py  line_vega.py
Alternatives/Scatterplot/: scatter_bokeh.py  scatter_matplotlib.py  scatter_plotly.py  scatter_vega.py
Benchmark/: benchmark.py  benchmark_graphs.py
Benchmark/benchmark_scenarios/: __init__.py  scaling.py  scatter_simul.py  scatter_single.py  streaming.py  transforms.py  utils.py
Examples/CustomPlot/: CustomPlot.py
Examples/Demos for thesis/: demo_heatmap.py  demo_line.py  demo_polyline.py  demo_scatter.py
Examples/Notebooks/: main_customplot.ipynb  main_demo.ipynb  main_gravity.ipynb  main_minimal.ipynb
Examples/StandaloneScripts/: main_clone.py  main_customplot.py  main_demo.py  main_gravity.py  main_gravity_big.py  main_linked_windows.py  main_minimal.py  main_neural_network.py  main_sonification.py
MCVGraph/: BasePlot.py  DataSource.py  EventType.py  GraphBus.py  __init__.py
MCVGraph/canvas/: Canvas.py
MCVGraph/graphs/: HeatmapPlot.py  LinePlot.py  (+2 more)
UnitTest/: benchmark.py  unittest.py
canvas/: Canvas.py
graphs/: HeatmapPlot.py  LinePlot.py  PolylinePlot.py  ScatterPlot.py
widgets/: GraphWidget.py  ViewBox.py
(+18 files in other folders)
