[project]
name = "MCVGraph"
version = "0.1.0"
description = "Multiple Coordinated View Graph plotting utilities"
authors = [{ name = "Lukas Penner" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # For Python < 3.12: stay on the 1.24.x line (works for 3.8–3.11)
    "numpy==1.24.4; python_version<'3.12'",
    # For Python >= 3.12: allow newer releases
    "numpy>=1.26.0,<2.0; python_version>='3.12'",
    "pyqtgraph>=0.13.3",
    "sounddevice>=0.5.2",
    "PyQt5-sip>=12.15.0",
]

[project.optional-dependencies]
windows = [
    "PyQt5>=5.15.10",
]
